# player

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  multimedia-player.code-workspace
docs/: CODE_FORMAT.md  PROJECT_OVERVIEW.md
include/core/: FFmpegMediaDetector.h  MediaManager.h
include/media/: FFmpegMediaDetector.h  FFmpegStream.h  FFmpegVideoStream.h  ImageViewer.h  MediaPlayer.h
include/ui/: ImageWidget.h  MainWindow.h  MediaDisplayWidget.h  PlaylistWidget.h  VideoWidget.h
resources/: resources.qrc
scripts/: build_linux.sh  build_windows.bat  setup_vscode.bat  setup_vscode.sh
src/: main.cpp
src/core/: FFmpegMediaDetector.cpp
src/media/: FFmpegMediaDetector.cpp  FFmpegStream.cpp  FFmpegVideoStream.cpp  ImageViewer.cpp  MediaPlayer.cpp
src/ui/: AudioPlayer.cpp  AudioPlayer.h  ImageWidget.cpp  MainWindow.cpp  OpenGLFrameRenderer.cpp  OpenGLFrameRenderer.h  OpenGLVideoWidget.cpp  OpenGLVideoWidget.h  QLabelImageWidget.h  VideoWidget.cpp
